--- a/lib/moba_web/templates/player/_duels.html.heex
+++ b/lib/moba_web/templates/player/_duels.html.heex
@@ -16,7 +16,8 @@
         <h4 class="text-left">
           <span class="badge badge-pill badge-light-danger font-15">
             <%= @player.duel_score["#{@current_player.id}"] || 0 %>
-          </span> <%= username(@player) %>
+          </span>
+          <%= username(@player) %>
         </h4>
       </div>
     </div>
