Added stats to homepage

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -29,8 +29,20 @@
   font-family: rpg;
 }
 
+.f-ora{
+  font-family: "houschka-pro", sans-serif;
+  font-weight: 600;
+  font-style: normal;
+  letter-spacing: 0.5px;
+}
+
+
 .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6{
-  font-family: 'Nunito', sans-serif;
+  // font-family: 'Nunito', sans-serif;
+  font-family: "houschka-pro", sans-serif;
+  font-weight: 600;
+  font-style: normal;
+  letter-spacing: 0.5px;
 }
 
 .sidebar-nav-container{
