--- a/lib/moba_web/templates/create/_build.html.heex
+++ b/lib/moba_web/templates/create/_build.html.heex
@@ -24,7 +24,7 @@
       <% else %>
         <button
           type="button"
-          class="btn btn-secondary btn-lg col-6 margin-auto"
+          class="btn btn-secondary btn-lg col-6 margin-auto h5"
           phx-click="pick-build"
           phx-value-number={@index}
         >
