--- a/lib/moba_web/templates/layout/_head.html.heex
+++ b/lib/moba_web/templates/layout/_head.html.heex
@@ -11,6 +11,7 @@
   </.live_title>
   <link rel="stylesheet" href={Routes.static_path(@conn, "/css/app.css")} />
   <link rel="shortcut icon" href={assigns[:favicon] || Routes.static_path(@conn, "/images/favicon.png")} />
+  <link rel="stylesheet" href="https://use.typekit.net/juc8mry.css" />
   <script src="https://kit.fontawesome.com/26d6de301e.js">
   </script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
