--- a/lib/moba_web/templates/tavern/_skill.html.heex
+++ b/lib/moba_web/templates/tavern/_skill.html.heex
@@ -11,7 +11,7 @@
         title={GH.skill_description(@skill)}
       />
       <br />
-      <h3>
+      <h3 class="f-rpg">
         <%= @skill.name %><br />
         <small class="font-italic text-muted">(mouse over image for info)</small>
       </h3>
