--- a/lib/moba_web/templates/create/_background_avatar.html.heex
+++ b/lib/moba_web/templates/create/_background_avatar.html.heex
@@ -66,7 +66,7 @@
             <a
               href="javascript:;"
               id={"pick-avatar-#{@avatar.id}"}
-              class="col-xl-9 col-12 margin-auto mt-2 btn btn-secondary btn-block btn-lg text-white dark-button"
+              class="col-xl-9 col-12 margin-auto mt-2 btn btn-secondary btn-block btn-lg text-white dark-button h5"
               phx-click="pick-avatar"
               phx-hook="AnimateScroll"
               phx-target-element="#create-new"
