--- a/lib/moba_web/templates/layout/live.html.heex
+++ b/lib/moba_web/templates/layout/live.html.heex
@@ -8,6 +8,41 @@
     ) %>
     <div class="col">
       <%= @inner_content %>
+      <div :if={show_footer?(assigns)} class="row stats-footer">
+        <% stats = footer_stats() %>
+        <div class="col">
+          <div class="card dark-bg-lighter mb-0">
+            <div class="card-body pb-3 pt-3">
+              <div class="row justify-content-center">
+                <div class="col text-center">
+                  <h5><i class="fa fa-users mr-1"></i><%= stats.players %> players</h5>
+                </div>
+                <div class="col text-center">
+                  <h5><i class="fa fa-swords mr-1"></i><%= stats.matches %> matches</h5>
+                </div>
+                <div class="col text-center">
+                  <h5><i class="fa fa-sword mr-1"></i><%= stats.heroes %> heroes</h5>
+                </div>
+                <div class="col text-center">
+                  <h5>
+                    <img src="/images/league/5.png" class="mr-1" /><%= stats.masters %> masters
+                  </h5>
+                </div>
+                <div class="col text-center">
+                  <h5>
+                    <img src="/images/league/6.png" class="mr-1" /><%= stats.grandmasters %> grandmasters
+                  </h5>
+                </div>
+                <div class="col text-center">
+                  <h5>
+                    <img src="/images/league/6.png" class="mr-1 undefeated" /><%= stats.undefeated %> undefeated
+                  </h5>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 <% else %>
