--- a/lib/moba_web/templates/layout/live.html.heex
+++ b/lib/moba_web/templates/layout/live.html.heex
@@ -21,7 +21,7 @@
                   <h5><i class="fa fa-swords mr-1"></i><%= stats.matches %> matches</h5>
                 </div>
                 <div class="col text-center">
-                  <h5><i class="fa fa-sword mr-1"></i><%= stats.heroes %> heroes</h5>
+                  <h5><i class="fa fa-helmet-battle mr-1"></i><%= stats.heroes %> heroes</h5>
                 </div>
                 <div class="col text-center">
                   <h5>
