--- a/lib/moba_web/templates/layout/live.html.heex
+++ b/lib/moba_web/templates/layout/live.html.heex
@@ -15,13 +15,14 @@
             <div class="card-body pb-3 pt-3">
               <div class="row justify-content-center">
                 <div class="col text-center">
-                  <h5><i class="fa fa-users mr-1"></i><%= stats.players %> players</h5>
-                </div>
-                <div class="col text-center">
                   <h5><i class="fa fa-swords mr-1"></i><%= stats.matches %> matches</h5>
                 </div>
                 <div class="col text-center">
-                  <h5><i class="fa fa-helmet-battle mr-1"></i><%= stats.heroes %> heroes</h5>
+                  <h5><i class="fa fa-users mr-1"></i><%= stats.active %> active</h5>
+                </div>
+
+                <div class="col text-center">
+                  <h5><i class="fa fa-helmet-battle mr-1"></i><%= stats.heroes %> trained</h5>
                 </div>
                 <div class="col text-center">
                   <h5>
