--- a/lib/moba_web/templates/battle/_active_turn.html.heex
+++ b/lib/moba_web/templates/battle/_active_turn.html.heex
@@ -17,11 +17,12 @@
 <div class="row mb-1 mt-1">
   <div class="col">
     <div class="skills-container">
-      <%= for skill <- @hero.skills do %>
+      <%= for {skill, index} <- Enum.with_index(@hero.skills) do %>
         <%= if can_use?(@turn, skill) && !@turn.attacker.double_skill do %>
           <div class="img-container skill-container float-left" data-resource={skill.id}>
             <img
               phx-value-id={skill.id}
+              data-index={index}
               src={GH.image_url(skill)}
               data-toggle="tooltip"
               title={GH.skill_description(skill)}
@@ -32,12 +33,14 @@
             />
             <br />
             <span class="badge badge-pill badge-primary mp-cost"><%= skill.mp_cost %></span>
+            <span class="hotkey f-rpg"><%= skill_hotkey(index) %></span>
           </div>
         <% else %>
           <div class="img-container skill-container float-left inactive">
             <img
               src={GH.image_url(skill)}
               data-toggle="tooltip"
+              data-index={index}
               title={GH.skill_description(skill)}
               class="skill-img"
               id={"inactive-skill-#{skill.id}"}
@@ -50,6 +53,7 @@
         <img
           phx-click="pick-skill"
           phx-value-id=""
+          data-index="4"
           src="/images/basic_attack.png"
           data-toggle="tooltip"
           title={GH.basic_attack_description()}
@@ -59,6 +63,7 @@
           phx-hook="InstaSkill"
           id="pick-basic-attack"
         />
+        <span class="hotkey f-rpg"><%= skill_hotkey(4) %></span>
       </div>
     </div>
   </div>
@@ -66,11 +71,12 @@
 <div class="row">
   <div class="col">
     <div class="items-container">
-      <%= for item <- @hero.items do %>
+      <%= for {item, index} <- Enum.with_index(@hero.items) do %>
         <%= if can_use?(@turn, item) do %>
           <div class="img-container item-container float-left">
             <img
               phx-value-id={item.id}
+              data-index={index}
               phx-hook="InstaItem"
               src={GH.image_url(item)}
               data-toggle="tooltip"
@@ -82,12 +88,14 @@
             <%= if item.mp_cost > 0 do %>
               <span class="badge badge-pill badge-primary mp-cost"><%= item.mp_cost %></span>
             <% end %>
+            <span class="hotkey f-rpg"><%= item_hotkey(index) %></span>
           </div>
         <% else %>
           <div class="img-container item-container float-left inactive">
             <img
               src={GH.image_url(item)}
               data-toggle="tooltip"
+              data-index={index}
               title={GH.item_description(item)}
               class="item-img inactive"
             />
