Better game stats in homepage

--- a/lib/moba_web/templates/layout/live.html.heex
+++ b/lib/moba_web/templates/layout/live.html.heex
@@ -18,7 +18,7 @@
                   <h5><i class="fa fa-swords mr-1"></i><%= stats.matches %> matches</h5>
                 </div>
                 <div class="col text-center">
-                  <h5><i class="fa fa-users mr-1"></i><%= stats.active %> active</h5>
+                  <h5><i class="fa fa-users mr-1"></i><%= stats.active %> players</h5>
                 </div>
 
                 <div class="col text-center">
