--- a/lib/moba_web/controllers/game_html/homepage.html.heex
+++ b/lib/moba_web/controllers/game_html/homepage.html.heex
@@ -2,116 +2,119 @@
 <html lang="en">
   <%= MobaWeb.LayoutView.render("_head.html", conn: @conn, current_hero: nil) %>
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-    }
+        * {
+          margin: 0;
+          padding: 0;
+        }
 
-    @font-face {
-      font-family: pressStart;
-      src: url("/fonts/start.ttf");
-      font-display: swap;
-    }
+        @font-face {
+          font-family: pressStart;
+          src: url("/fonts/start.ttf");
+          font-display: swap;
+        }
 
-    @font-face {
-      font-family: rpg;
-      src: url("/fonts/rpg.ttf");
-    }
+        @font-face {
+          font-family: rpg;
+          src: url("/fonts/rpg.ttf");
+        }
 
-    .f-rpg{
-      font-family: rpg;
-    }
+        .f-rpg{
+          font-family: rpg;
+        }
 
-    @keyframes shadow {
-      0% {
-        box-shadow: inset 0px 0px 10px black;
-      }
-      50% {
-        box-shadow: inset 0px 0px 35px black;
-      }
-      100% {
-        box-shadow: inset 0px 0px 10px black;
-      }
-    }
+        @keyframes shadow {
+          0% {
+            box-shadow: inset 0px 0px 10px black;
+          }
+          50% {
+            box-shadow: inset 0px 0px 35px black;
+          }
+          100% {
+            box-shadow: inset 0px 0px 10px black;
+          }
+        }
 
-    .shadow-fx{
-      animation: 3s shadow infinite;
-    }
+        .shadow-fx{
+          animation: 3s shadow infinite;
+        }
 
-    html,
-    body {
-      width: 100%;
-      height: 100%;
-      padding-bottom: 0;
-    }
+        html,
+        body {
+          width: 100%;
+          height: 100%;
+          padding-bottom: 0;
+        }
 
-    .hero {
-      width: 100%;
-      height: 100%;
-      min-width: 100%;
-      min-height: 100%;
-      position: relative;
-    }
-    .hero::before {
-      background-image: url(/images/home.jpg);
-      background-size: cover;
-      content: "";
-      display: block;
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      z-index: -2;
-      opacity: 0.7;
-    }
-    .sub-hero{
-      background-image: url(/images/home.jpg);
-      background-position: center;
-      max-width: 1350px;
-      width: 100%;
-      min-height: 730px;
-      box-shadow: 0px 0px 50px 50px rgba(0,0,0,1);
-      padding-top: 280px;
-    }
-    .flex-center {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-content: center;
-    }
-    .start{
-      background-color: #d62d45;
-      border-color: #d62d45;
-      box-shadow: 0px 0px 12px 6px rgba(0,0,0,0.75);
-      font-weight: bold;
-      font-family: pressStart;
-      font-size: 0.8rem;
-      margin-bottom: 80px;
-      animation: 2s shadow infinite;
-    }
-    .stat-box{
-      background: rgba(0, 0, 0, 0.85);
-      border-radius: 10px;
-      width: 250px;
-      font-size: 1.2rem;
-      font-family: rpg;
-      text-align: center;
-      margin-left: 30px;
-      margin-right: 30px;
-      padding: 10px;
-      box-shadow: 0px 0px 13px 2px rgba(255,255,255,0.75);
-    }
-    .number{
-      font-size: 1.8rem;
-      font-weight: bold;
-      color: white;
-    }
+        .hero {
+          width: 100%;
+          height: 100%;
+          min-width: 100%;
+          min-height: 100%;
+          position: relative;
+        }
+        .hero::before {
+          background-image: url(/images/home.jpg);
+          background-size: cover;
+          background-position: center;
+          content: "";
+          display: block;
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          z-index: -2;
+    /*      opacity: 0.7;*/
+        }
+        .sub-hero{
+          background-position: center;
+          max-width: 1000px;
+          width: 100%;
+          min-height: 330px;
+          padding-top: 30px;
+        }
+        .flex-center {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-content: center;
+        }
+        .start{
+          background-color: #d62d45;
+          border-color: #d62d45;
+          box-shadow: 0px 0px 12px 6px rgba(0,0,0,0.75);
+          font-weight: bold;
+          font-family: pressStart;
+          font-size: 0.8rem;
+          margin-top: 100px;
+          margin-bottom: 180px;
+          animation: 2s shadow infinite;
+        }
+        .stat-box{
+          background: rgba(0, 0, 0, 0.85);
+          border-radius: 10px;
+          width: 250px;
+          font-size: 1.2rem;
+          font-family: rpg;
+          text-align: center;
+          margin-left: 30px;
+          margin-right: 30px;
+          padding: 10px;
+          box-shadow: 0px 0px 13px 2px rgba(255,255,255,0.75);
+        }
+        .number{
+          font-size: 1.8rem;
+          font-weight: bold;
+          color: white;
+        }
+      
   </style>
   <body style="background: black">
     <div class="hero flex-center">
-      <div class="sub-hero flex-center">
-        <a href="/start" class="btn btn-lg btn-danger start">PRESS START</a>
+      <div class="sub-hero">
+        <div class="margin-auto text-center">
+          <a href="/start" class="btn btn-lg btn-danger start">PRESS START</a>
+        </div>
         <div class="stats row">
           <div class="stat-box col">
             <span class="number"><%= @counts.players %></span> <br /> TOTAL PLAYERS
