New homepage start button

--- a/lib/moba_web/controllers/game_html/homepage.html.heex
+++ b/lib/moba_web/controllers/game_html/homepage.html.heex
@@ -84,8 +84,7 @@
           border-color: #d62d45;
           box-shadow: 0px 0px 12px 6px rgba(0,0,0,0.75);
           font-weight: bold;
-          font-family: pressStart;
-          font-size: 0.8rem;
+          font-size: 1.3rem;
           margin-top: 100px;
           margin-bottom: 180px;
           animation: 2s shadow infinite;
@@ -113,7 +112,7 @@
     <div class="hero flex-center">
       <div class="sub-hero">
         <div class="margin-auto text-center">
-          <a href="/start" class="btn btn-lg btn-danger start">PRESS START</a>
+          <a href="/start" class="btn btn-lg btn-danger start f-rpg">ENTER THE ARENA</a>
         </div>
         <div class="stats row">
           <div class="stat-box col">
