--- a/assets/css/community.scss
+++ b/assets/css/community.scss
@@ -1,5 +1,9 @@
 .community{
 
+  .nav-bordered a.active{
+    border-color: #1abc9c !important;
+  }
+
   .h5{
     line-height: 1.5rem;
     margin-bottom: 0;
