Arena: replaces daily win rate with daily wins

--- a/lib/moba_web/templates/arena/_pvp_progression.html.heex
+++ b/lib/moba_web/templates/arena/_pvp_progression.html.heex
@@ -78,9 +78,9 @@
               <small class="text-muted">Total Win Rate</small>
             </h3>
             <h3 class="info-box text-success">
-              <span class="f-rpg"><%= PlayerView.daily_win_rate(@current_player) %></span>
+              <span class="f-rpg"><%= @current_player.daily_wins %></span>
               <br />
-              <small class="text-muted">Daily Win Rate</small>
+              <small class="text-muted">Daily Wins</small>
             </h3>
           </div>
         </div>
