--- a/lib/moba_web/templates/training/_dead.html.heex
+++ b/lib/moba_web/templates/training/_dead.html.heex
@@ -1,9 +1,9 @@
 <div class="card-box border border-light bg-light" style="height: 450px">
   <p class="text-center mt-1"><i class="fa fa-skull-crossbones fa-3x text-dark"></i></p>
-  <h2 class="text-center mb-4">
-    You are DEAD<br />
-    <small class="text-muted">You can continue battling by buying back your hero</small>
+  <h2 class="text-center mb-0">
+    You are DEAD
   </h2>
+  <h3 class="text-muted text-center mb-4">You can continue battling by buying back your hero</h3>
   <div class="text-center mt-2 mb-2">
     <%= if @current_hero.gold >= Game.buyback_price(@current_hero) do %>
       <button
