--- a/lib/moba_web/controllers/admin/user_html/show.html.heex
+++ b/lib/moba_web/controllers/admin/user_html/show.html.heex
@@ -1,7 +1,7 @@
 <section id="torch-toolbar">
   <div class="torch-container">
-    <%= link "Edit", to: Routes.user_path(@conn, :edit, @user), class: "torch-button" %>
-    <%= link "Back", to: Routes.user_path(@conn, :index), class: "torch-button" %>
+    <%= link("Edit", to: Routes.user_path(@conn, :edit, @user), class: "torch-button") %>
+    <%= link("Back", to: Routes.user_path(@conn, :index), class: "torch-button") %>
   </div>
 </section>
 
@@ -11,27 +11,25 @@
       <h3>User Details</h3>
     </header>
     <ul>
+      <li>
+        <div class="torch-show-label">Username:</div>
+        <div class="torch-show-data"><%= @user.username %></div>
+      </li>
 
-        <li>
-          <div class="torch-show-label">Username:</div>
-          <div class="torch-show-data"><%= @user.username %></div>
-        </li>
+      <li>
+        <div class="torch-show-label">Email:</div>
+        <div class="torch-show-data"><%= @user.email %></div>
+      </li>
 
-        <li>
-          <div class="torch-show-label">Email:</div>
-          <div class="torch-show-data"><%= @user.email %></div>
-        </li>
+      <li>
+        <div class="torch-show-label">Is admin:</div>
+        <div class="torch-show-data"><%= @user.is_admin %></div>
+      </li>
 
-        <li>
-          <div class="torch-show-label">Is admin:</div>
-          <div class="torch-show-data"><%= @user.is_admin %></div>
-        </li>
-
-        <li>
-          <div class="torch-show-label">Shards:</div>
-          <div class="torch-show-data"><%= @user.shard_count %></div>
-        </li>
-
+      <li>
+        <div class="torch-show-label">Shards:</div>
+        <div class="torch-show-data"><%= @user.shard_count %></div>
+      </li>
     </ul>
   </div>
 </section>
