--- a/lib/moba_web/templates/pow_email_confirmation/mailer/email_confirmation.text.heex
+++ b/lib/moba_web/templates/pow_email_confirmation/mailer/email_confirmation.text.heex
@@ -1,5 +1,3 @@
 Hi,
 
-Please use the following link to confirm your e-mail address:
-
-<%= @url %>
+Please use the following link to confirm your e-mail address: <%= @url %>
