--- a/lib/moba_web/templates/pow_reset_password/mailer/reset_password.text.heex
+++ b/lib/moba_web/templates/pow_reset_password/mailer/reset_password.text.heex
@@ -1,7 +1,4 @@
 Hi,
 
 Please use the following link to reset your password:
-
-<%= @url %>
-
-You can disregard this email if you didn't request a password reset.
+<%= @url %> You can disregard this email if you didn't request a password reset.
