Proper styling for daily wins row in player ranking

--- a/lib/moba_web/templates/arena/_ranking.html.heex
+++ b/lib/moba_web/templates/arena/_ranking.html.heex
@@ -108,7 +108,7 @@
             </th>
             <th>
               <h3
-                class={PlayerView.performance_class(@current_player)}
+                class="text-success"
                 title={"#{@current_player.daily_wins} wins / #{@current_player.daily_matches} matches"}
                 data-toggle="tooltip"
               >
