--- a/lib/moba_web/templates/arena/_ranking.html.heex
+++ b/lib/moba_web/templates/arena/_ranking.html.heex
@@ -60,6 +60,30 @@
             <td>
               <h1 class="f-rpg">
                 #<%= player.ranking || index %>
+                <%= if player.ranking in [6,7,8,9] do %>
+                  <i
+                    class="fa fa-chevrons-up text-success text-small h4"
+                    data-toggle="tooltip"
+                    title={"#{username(player)} will rank up to Immortal"}
+                  >
+                  </i>
+                <% end %>
+                <%= if player.ranking in [26, 27, 28, 29, 30] do %>
+                  <i
+                    class="fa fa-chevrons-up text-success text-small h4"
+                    data-toggle="tooltip"
+                    title={"#{username(player)} will rank up to Shadow"}
+                  >
+                  </i>
+                <% end %>
+                <%= if player.ranking in [21, 22, 23, 24, 25] do %>
+                  <i
+                    class="fa fa-chevrons-down text-danger text-small h4"
+                    data-toggle="tooltip"
+                    title={"#{username(player)} will rank down to Pleb"}
+                  >
+                  </i>
+                <% end %>
               </h1>
             </td>
             <td>
