Display Speed in battle hero stats

--- a/lib/moba_web/templates/battle/_hero.html.heex
+++ b/lib/moba_web/templates/battle/_hero.html.heex
@@ -54,6 +54,13 @@
           >
             <i class="fa fa-shield-halved"></i> <%= total_armor_for(@hero, @last_hero) %>
           </button>
+          <button
+            class="btn btn-icon waves-effect btn-outline-dark waves-light text-orange"
+            data-toggle="tooltip"
+            title="Speed"
+          >
+            <i class="fa fa-running"></i> <%= total_speed_for(@hero, @last_hero) %>
+          </button>
         </div>
       </div>
     </div>
